--- a/03_yolo_v7_tutorial/lab/YOLOv7Application.ipynb
+++ b/03_yolo_v7_tutorial/lab/YOLOv7Application.ipynb
@@ -9,6 +9,39 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the original [YOLO v7 repository](https://github.com/WongKinYiu/yolov7), the authors explain how to use their scripts for training and inference. This application notebook builds around the guidelines provided in that original repository.\n",
+    "\n",
+    "The present notebook contains the entire YOLO training and testing application; additionally, for deployment, these co-located scripts can be used:\n",
+    "\n",
+    "- [`detect_roboflow.py`](./lab/detect_roboflow.py)\n",
+    "- [`detect_pytorch_webcam_opencv.py`](./lab/yolov7/detect_pytorch_webcam_opencv.py)\n",
+    "- [`detect_onnx_webcam_opencv.py`](./lab/detect_onnx_webcam_opencv.py)\n",
+    "\n",
+    "Table of contents:\n",
+    "\n",
+    "- [1. Install Dependencies and Set Up Environment](#1.-Install-Dependencies-and-Set-Up-Environment)\n",
+    "    - GPU\n",
+    "    - YOLOv7 Repository\n",
+    "    - Additional Requirements\n",
+    "- [2. Download Custom Dataset from Roboflow](#2.-Download-Custom-Dataset-from-Roboflow)\n",
+    "    - Get the Dataset\n",
+    "    - Check the Dataset Structure\n",
+    "- [3. Training](#3.-Training)\n",
+    "    - Get Pre-Trained Weights\n",
+    "    - Train\n",
+    "- [4. Test Results](#4.-Test-Results)\n",
+    "- [5. Export the Model](#5.-Export-the-Model)\n",
+    "    - ONNX: for inference and deployment\n",
+    "- [6. Deployment](#6.-Deployment)\n",
+    "    - Roboflow Static Deployment: API\n",
+    "    - Pytorch Online Webcam Deployment\n",
+    "    - ONNX Deployment\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "7mGmQbAO5pQb"
    },
@@ -34,10 +67,18 @@
     "# Update your NVIDIA drivers: https://www.nvidia.com/Download/index.aspx\n",
     "# I have version 12.1, but it works with older versions, e.g. 11.7\n",
     "# Check your CUDA version with: nvidia-smi.exe\n",
-    "conda install pytorch torchvision torchaudio pytorch-cuda=11.7 -c pytorch -c nvidia\n",
+    "# In case of any runtime errors, check vrsion compatibility tables:\n",
+    "# https://github.com/pytorch/vision#installation\n",
+    "# The default conda installation command DID NOT WORK\n",
+    "conda install pytorch=1.12 torchvision=0.13 torchtext=0.13 torchaudio pytorch-cuda=11.7 -c pytorch -c nvidia\n",
+    "# But the following pip install comman DID WORK\n",
+    "python -m pip install torch==1.13+cu117 torchvision==0.14+cu117 torchaudio torchtext==0.14 --index-url https://download.pytorch.org/whl/cu117\n",
     "\n",
-    "# Pytorch: Mac / Windows CPU\n",
+    "# Pytorch: Mac / Windows CPU (not tested)\n",
     "python -m pip install torch torchvision torchaudio\n",
+    "\n",
+    "# Dump installed libraries in pip format\n",
+    "python -m pip list --format=freeze > requirements.txt\n",
     "```"
    ]
   },
@@ -11388,6 +11429,13 @@
     "\n",
     "**WARNING**: the code needs to cleaning up, refactoring, etc. Notice the different hard-coded parameters."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
