feat: get number of parameters

--- a/04_basic_object_detection_pyimagesearch/02_trained/object_detector_in_pytorch.ipynb
+++ b/04_basic_object_detection_pyimagesearch/02_trained/object_detector_in_pytorch.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\msagardi\\git_repositories\\detection_segmentation_pytorch\\04_pyimagesearch_basic_object_detection\\02_trained\\object-detector-in-pytorch\n"
+      "C:\\Users\\msagardi\\git_repositories\\detection_segmentation_pytorch\\04_basic_object_detection_pyimagesearch\\02_trained\\object-detector-in-pytorch\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "id": "VJaCNlDDRz6d",
     "tags": []
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "id": "pYn8YXW4Y2oL",
     "tags": []
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "id": "fjFsu0AX1UEI",
     "tags": []
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "id": "lFUYN4tTGvvl",
     "tags": []
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "id": "wf6uNQHPH3EM",
     "tags": []
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "id": "GltXj2F3HjcG",
     "tags": []
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "id": "FaftEeBtKEGa",
     "tags": []
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "id": "qckbTkCHKaKG",
     "tags": []
@@ -561,7 +561,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get number of model parameters\n",
+    "def get_num_parameters(net):\n",
+    "    model_parameters = filter(lambda p: p.requires_grad, net.parameters())\n",
+    "    params = sum([np.prod(p.size()) for p in model_parameters])\n",
+    "    return params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "id": "rkW2-6UiKJce",
     "tags": []
@@ -581,6 +596,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number of (trained) parameters:  1586023\n",
       "ObjectDetector(\n",
       "  (baseModel): ResNet(\n",
       "    (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
@@ -794,6 +810,8 @@
     "# device\n",
     "objectDetector = ObjectDetector(resnet, len(le.classes_))\n",
     "objectDetector = objectDetector.to(config.DEVICE)\n",
+    "\n",
+    "print(\"Number of (trained) parameters: \", get_num_parameters(objectDetector))\n",
     "\n",
     "# define our loss functions\n",
     "classLossFunc = CrossEntropyLoss()\n",
