feat: run notebook

--- a/05_unet_segmentation_pyimagesearch/unet_pytorch.ipynb
+++ b/05_unet_segmentation_pyimagesearch/unet_pytorch.ipynb
@@ -707,6 +707,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get number of model parameters\n",
+    "def get_num_parameters(net):\n",
+    "    model_parameters = filter(lambda p: p.requires_grad, net.parameters())\n",
+    "    params = sum([np.prod(p.size()) for p in model_parameters])\n",
+    "    return params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of parameters:  117041\n"
+     ]
+    }
+   ],
+   "source": [
+    "unet = UNet()\n",
+    "print(\"Number of (trained) parameters: \", get_num_parameters(unet))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Dc3vxuwBPF1A"
